[gd_scene load_steps=30 format=4 uid="uid://casl60blhwfxn"]

[ext_resource type="Texture2D" uid="uid://dnan5kv2thsah" path="res://Legacy-Fantasy - High Forest 2.3/Background/Background2.png" id="1_m8pu4"]
[ext_resource type="Script" path="res://lv_2.gd" id="1_rtph5"]
[ext_resource type="TileSet" uid="uid://bnrbx34nnxitt" path="res://Legacy-Fantasy - High Forest 2.3/Assets/Tiles.tres" id="2_s3ovj"]
[ext_resource type="PackedScene" uid="uid://btvr2gykt5ai5" path="res://protag.tscn" id="3_tgg1x"]
[ext_resource type="PackedScene" uid="uid://bluiy7ssq0lma" path="res://Legacy-Fantasy - High Forest 2.3/Assets/chest.tscn" id="4_touw1"]
[ext_resource type="PackedScene" uid="uid://bnsthuviprawi" path="res://Legacy-Fantasy - High Forest 2.3/Assets/key.tscn" id="5_comvl"]
[ext_resource type="Texture2D" uid="uid://xf5ee0roaxqq" path="res://Pixel Art Key Pack - Animated/Key 6/GOLD/Key 6 - GOLD - frame0000.png" id="6_v38im"]
[ext_resource type="AudioStream" uid="uid://dunw43rpwm5y5" path="res://Music/battle-time-178551.mp3" id="7_5kmxu"]
[ext_resource type="Texture2D" uid="uid://cqiihfo7v3qyd" path="res://Legacy-Fantasy - High Forest 2.3/Mob/Small Bee/Fly/Fly-Sheet.png" id="9_e2gvg"]
[ext_resource type="Script" path="res://bee.gd" id="9_ftfx3"]
[ext_resource type="Texture2D" uid="uid://bsr2e56m6ktlf" path="res://Legacy-Fantasy - High Forest 2.3/Mob/Small Bee/Hit/Hit-Sheet.png" id="10_nf556"]

[sub_resource type="Animation" id="Animation_40elh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../HiddenLabels:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-32, -724)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../HiddenLabels:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_fhs1w"]
resource_name = "onDeath"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../HiddenLabels:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-32, -724), Vector2(-19, -540)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../HiddenLabels:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jc4g6"]
_data = {
"RESET": SubResource("Animation_40elh"),
"onDeath": SubResource("Animation_fhs1w")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lcnce"]
size = Vector2(3083, 20)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5yud5"]
height = 42.0

[sub_resource type="AtlasTexture" id="AtlasTexture_gbeu6"]
atlas = ExtResource("9_e2gvg")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gej8n"]
atlas = ExtResource("9_e2gvg")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oda2a"]
atlas = ExtResource("9_e2gvg")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ihevk"]
atlas = ExtResource("9_e2gvg")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6bhor"]
atlas = ExtResource("10_nf556")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxteb"]
atlas = ExtResource("10_nf556")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f47yy"]
atlas = ExtResource("10_nf556")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sy3bb"]
atlas = ExtResource("10_nf556")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_h8ogh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbeu6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gej8n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oda2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ihevk")
}],
"loop": true,
"name": &"Fly",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6bhor")
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxteb")
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f47yy")
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sy3bb")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"Hit",
"speed": 8.0
}]

[sub_resource type="Animation" id="Animation_84k8s"]
resource_name = "sideSide"
length = 1.2
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-789, -31), Vector2(-703, -27), Vector2(-789, -31), Vector2(-937, -23), Vector2(-789, -31)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BeeSprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_edvdp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-789, -31)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BeeSprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_emxpp"]
_data = {
"RESET": SubResource("Animation_edvdp"),
"sideSide": SubResource("Animation_84k8s")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_es2it"]
size = Vector2(97.75, 60.5)

[node name="Lv2" type="Node2D"]
script = ExtResource("1_rtph5")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -107.135
offset_top = -35.0
offset_right = 1215.86
offset_bottom = 719.0
metadata/_edit_use_anchors_ = true

[node name="BG" type="Sprite2D" parent="."]
position = Vector2(555.365, 352)
scale = Vector2(2.77708, 2.86029)
texture = ExtResource("1_m8pu4")

[node name="BG2" type="Sprite2D" parent="."]
position = Vector2(1878.86, 356)
scale = Vector2(2.77708, 2.86029)
texture = ExtResource("1_m8pu4")

[node name="BG3" type="Sprite2D" parent="."]
position = Vector2(-774.135, 354)
scale = Vector2(2.82027, 2.8563)
texture = ExtResource("1_m8pu4")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
light_mask = 3
visibility_layer = 3
position = Vector2(-8.13525, 11)
tile_map_data = PackedByteArray("AAAEACUAAAABAAAAAAAEACYAAAABAAEAAAAEACcAAAABAAIAAAAEACgAAAABAAMAAAAEACkAAAABAAQAAAAFACUAAAACAAAAAAAFACYAAAACAAEAAAAFACcAAAACAAIAAAAFACgAAAACAAMAAAAFACkAAAACAAQAAAAGACUAAAADAAAAAAAGACYAAAADAAEAAAAGACcAAAADAAIAAAAGACgAAAADAAMAAAAGACkAAAADAAQAAAABACUAAAABAAAAAAABACYAAAABAAEAAAABACcAAAABAAIAAAABACgAAAABAAMAAAABACkAAAABAAQAAAACACUAAAACAAAAAAACACYAAAACAAEAAAACACcAAAACAAIAAAACACgAAAACAAMAAAACACkAAAACAAQAAAADACUAAAADAAAAAAADACYAAAADAAEAAAADACcAAAADAAIAAAADACgAAAADAAMAAAADACkAAAADAAQAAAAHACUAAAABAAAAAAAHACYAAAABAAEAAAAHACcAAAABAAIAAAAHACgAAAABAAMAAAAHACkAAAABAAQAAAAIACUAAAACAAAAAAAIACYAAAACAAEAAAAIACcAAAACAAIAAAAIACgAAAACAAMAAAAIACkAAAACAAQAAAAJACUAAAADAAAAAAAJACYAAAADAAEAAAAJACcAAAADAAIAAAAJACgAAAADAAMAAAAJACkAAAADAAQAAAAKACUAAAAEAAAAAAAKACYAAAAEAAEAAAAKACcAAAAEAAIAAAAKACgAAAAEAAMAAAAKACkAAAAEAAQAAAAAACUAAAAAAAAAAAAAACYAAAAAAAEAAAAAACcAAAAAAAIAAAAAACgAAAAAAAMAAAAAACkAAAAAAAQAAAASACMAAAAAAAAAAAASACQAAAAAAAEAAAATACMAAAABAAAAAAATACQAAAABAAEAAAAUACMAAAACAAAAAAAUACQAAAACAAEAAAAVACMAAAADAAAAAAAVACQAAAADAAEAAAAWACMAAAAEAAAAAAAWACQAAAAEAAEAAAD2/x4AAAAAAAAAAAD2/x8AAAAAAAEAAAD3/x4AAAABAAAAAAD3/x8AAAABAAEAAAD4/x4AAAACAAAAAAD4/x8AAAACAAEAAAD5/x4AAAADAAAAAAD5/x8AAAADAAEAAAD6/x4AAAAEAAAAAAD6/x8AAAAEAAEAAADq/xsAAAAAAAAAAADq/xwAAAAAAAEAAADr/xsAAAABAAAAAADr/xwAAAABAAEAAADs/xsAAAACAAAAAADs/xwAAAACAAEAAADt/xsAAAADAAAAAADt/xwAAAADAAEAAADu/xsAAAAEAAAAAADu/xwAAAAEAAEAAADa/yIAAAAAAAAAAADa/yMAAAAAAAEAAADb/yIAAAABAAAAAADb/yMAAAABAAEAAADc/yIAAAACAAAAAADc/yMAAAACAAEAAADd/yIAAAADAAAAAADd/yMAAAADAAEAAADe/yIAAAAEAAAAAADe/yMAAAAEAAEAAAD2/yYAAAABAAAAAAD2/ycAAAABAAEAAAD3/yYAAAACAAAAAAD3/ycAAAACAAEAAAD4/yYAAAABAAAAAAD4/ycAAAABAAEAAAD5/yYAAAACAAAAAAD5/ycAAAACAAEAAAD6/yYAAAADAAAAAAD6/ycAAAADAAEAAADn/ycAAAAAAAAAAADn/ygAAAAAAAEAAADo/ycAAAABAAAAAADo/ygAAAABAAEAAADp/ycAAAACAAAAAADp/ygAAAACAAEAAADq/ycAAAADAAAAAADq/ygAAAADAAEAAADr/ycAAAAEAAAAAADr/ygAAAAEAAEAAAD7/yYAAAADAAAAAAD7/ycAAAADAAEAAAD8/yYAAAAEAAAAAAD8/ycAAAAEAAEAAAD1/yYAAAAAAAAAAAD1/ycAAAAAAAEAAAAFAB8AAAAAAAAAAAAFACAAAAAAAAEAAAAGAB8AAAABAAAAAAAGACAAAAABAAEAAAAHAB8AAAACAAAAAAAHACAAAAACAAEAAAAIAB8AAAADAAAAAAAIACAAAAADAAEAAAAJAB8AAAAEAAAAAAAJACAAAAAEAAEAAAA=")
tile_set = ExtResource("2_s3ovj")
use_kinematic_bodies = true

[node name="Protag" parent="." instance=ExtResource("3_tgg1x")]
position = Vector2(55.8647, 193)

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 0
offset_left = 15.8647
offset_top = 27.0
offset_right = 55.8647
offset_bottom = 67.0
metadata/_edit_use_anchors_ = true

[node name="KeyCounter" type="Label" parent="HUD/Control"]
layout_mode = 0
offset_left = -4.0
offset_top = -20.0
offset_right = 57.0
offset_bottom = 63.0
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0.988235, 0.67451, 0.266667, 1)
theme_override_font_sizes/font_size = 60
text = "0"
metadata/_edit_use_anchors_ = true

[node name="KeyLabelSprt" type="Sprite2D" parent="HUD/Control"]
position = Vector2(-15.5, 2.25)
scale = Vector2(0.9375, 0.842857)
texture = ExtResource("6_v38im")

[node name="HiddenLabels" type="Control" parent="HUD"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = -32.0
offset_top = -724.0
offset_right = 8.0
offset_bottom = -684.0

[node name="ControllerPlayer" type="AnimationPlayer" parent="HUD/HiddenLabels"]
root_node = NodePath("../../../HUD/Control")
libraries = {
"": SubResource("AnimationLibrary_jc4g6")
}

[node name="RepeatLv" type="Button" parent="HUD/HiddenLabels"]
layout_mode = 0
offset_left = 432.0
offset_top = 747.0
offset_right = 789.0
offset_bottom = 840.0
theme_override_font_sizes/font_size = 40
text = "Play Level Again"

[node name="MainMenu" type="Button" parent="HUD/HiddenLabels"]
layout_mode = 0
offset_left = 436.0
offset_top = 870.0
offset_right = 792.0
offset_bottom = 962.0
theme_override_font_sizes/font_size = 40
text = "Main Menu"

[node name="Lv1Music" type="AudioStreamPlayer" parent="HUD"]
stream = ExtResource("7_5kmxu")
volume_db = -10.0
autoplay = true

[node name="FallCheck" type="Area2D" parent="."]
position = Vector2(-8.13525, 11)

[node name="FallCol" type="CollisionShape2D" parent="FallCheck"]
position = Vector2(-28.8647, 924)
shape = SubResource("RectangleShape2D_lcnce")

[node name="Chest" parent="." instance=ExtResource("4_touw1")]
position = Vector2(-1198.14, -88)

[node name="Key" parent="." instance=ExtResource("5_comvl")]
position = Vector2(-482.135, 429)

[node name="Key2" parent="." instance=ExtResource("5_comvl")]
position = Vector2(317.865, 510)

[node name="Bee" type="CharacterBody2D" parent="." groups=["Mobs"]]
position = Vector2(-789, -31)
collision_layer = 2
collision_mask = 2
script = ExtResource("9_ftfx3")

[node name="BeeColl" type="CollisionShape2D" parent="Bee" groups=["Mobs"]]
position = Vector2(335, 552)
shape = SubResource("CapsuleShape2D_5yud5")

[node name="BeeSprite" type="AnimatedSprite2D" parent="Bee"]
position = Vector2(335, 556)
sprite_frames = SubResource("SpriteFrames_h8ogh")
animation = &"Hit"
autoplay = "Fly"
flip_h = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Bee"]
libraries = {
"": SubResource("AnimationLibrary_emxpp")
}
autoplay = "sideSide"

[node name="Bee2" type="CharacterBody2D" parent="." groups=["Mobs"]]
position = Vector2(-205.135, 41)
collision_layer = 2
collision_mask = 2
script = ExtResource("9_ftfx3")

[node name="BeeColl" type="CollisionShape2D" parent="Bee2" groups=["Mobs"]]
position = Vector2(335, 552)
shape = SubResource("CapsuleShape2D_5yud5")

[node name="BeeSprite" type="AnimatedSprite2D" parent="Bee2"]
position = Vector2(335, 556)
sprite_frames = SubResource("SpriteFrames_h8ogh")
animation = &"Hit"
autoplay = "Fly"
flip_h = true

[node name="Chest2" parent="." instance=ExtResource("4_touw1")]
position = Vector2(-1438.14, 56)

[node name="HitTutorial" type="Area2D" parent="."]

[node name="HitTutColl" type="CollisionShape2D" parent="HitTutorial"]
position = Vector2(50, 579)
shape = SubResource("RectangleShape2D_es2it")

[node name="HitTutLab" type="Label" parent="HitTutorial"]
visible = false
offset_left = -50.0
offset_top = 434.0
offset_right = 162.0
offset_bottom = 535.0
text = "The bees can't hurt you,
just push you, but if one 
is being too pesky, you can 
press F to...get rid of them"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="hit" from="Protag" to="Bee" method="_on_protag_hit"]
[connection signal="pressed" from="HUD/HiddenLabels/RepeatLv" to="." method="_on_repeat_lv_pressed"]
[connection signal="pressed" from="HUD/HiddenLabels/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="body_entered" from="FallCheck" to="." method="_on_fall_check_body_entered"]
[connection signal="body_entered" from="Chest" to="." method="_on_chest_body_entered"]
[connection signal="body_exited" from="Chest" to="." method="_on_chest_body_exited"]
[connection signal="body_entered" from="Key" to="Protag" method="_on_key_body_entered"]
[connection signal="body_entered" from="Key2" to="Protag" method="_on_key_2_body_entered"]
[connection signal="body_entered" from="Chest2" to="." method="_on_chest_2_body_entered"]
[connection signal="body_exited" from="Chest2" to="." method="_on_chest_2_body_exited"]
[connection signal="body_entered" from="HitTutorial" to="." method="_on_hit_tutorial_body_entered"]
[connection signal="body_exited" from="HitTutorial" to="." method="_on_hit_tutorial_body_exited"]
